@@ -268,6 +268,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   b - nqs2pbs is now a generated script
   b - correct handling of priv job attr
   b - change font selectors in manpages to bold
+  b - on pbs_server startup, don't skip job-exclusive nodes on initial MOM scan
+  b - pbs_server should not connect to "down" MOMs for any job operation
+  b - use alarm() around writing to job's stdio incase it happens to be a stopped tty
 
 2.1.10
   b - fix buffer overflow in rm_request,
